<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gtaskdroid</string>
    <string name="no_reminders">No Tasks Yet</string>
    <string name="time">Reminder Time</string>
    <string name="title">Event</string>
    <string name="save">Save</string>
    <string name="note">Description</string> 
    <string name="menu_insert">Add Task</string>
    <string name="menu_delete">Delete Task</string>
    <string name="task_saved_message">Task Saved</string>
    <string name="notify_new_task_msg">A task need to be reviewed </string>
    <string name="notify_new_task_title">Gtaskdroid reminder</string>
    <string name="pref_category_task_default_key">task_default_category</string>
    <string name="pref_category_task_default_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Task Title</string>
    <string name="pref_task_title_message">The default title for a tasks</string>
    <string name="pref_task_title_summary">Default title for tasks</string>
    <string name="pref_task_title_title">Default Task Title</string>
    <string name="menu_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="all_day">All day</string>
    <string name="duration">Duration</string>
    <string name="duration_to">to</string>
    <string name="event_location">Where</string>
    <string name="event_delete_title">Are you sure?</string>
    <string name="event_delete_message">Are you sure you want to delete this event?</string>
    <string name="title_empty">Title must be filled in</string>
    <string name="google_account_sync">Tasks</string>
    <string name="select_account">Select a Google Account</string>
    <string name="switch_account">Switch Account</string>
    <string name="sync_selected">Sync</string>
    <string name="default_task_due">Today</string>
    <string name="event_sync_toast_message">Events synced</string>
    <string name="date_time_not_set"> </string>
    <string name="no_network_connnection">Network connection unavailable</string>
    <string name="sync_back_selected">Sync with gtask</string>
    <string name="atleast_fill_title">Fill event title to sync</string>
    <string name="fill_task_title_to_save">Fill event title</string>
    <string name="task_added_gtask_successfully">Gtask Added successfully</string>
    <string name="pref_task_overdue_delete">prefOverdue</string>
    <string name="pref_task_overdue_delete_title">Overdue Tasks Removing</string>
    <string name="pref_task_overdue_delete_summary">select time to remove before tasks</string>
    <string name="advanced_options">Advance Options</string>
    <string name="quick_guide">Quick Guide</string>
    <string name="abt_app_name_str">Gtaskdroid version 1.0</string>
    <string name="empty_str"/>
    <string name="quick_guide_intro">Gtaskdroid is an Android app which helps you to organize your day to day tasks. This app is ready to go after installation. This app allows you to sync your Gtasks with this app and also you can push your task into Gtask. Authentication to Google accounts is taken from “Account and sync” settings on your device. To get the maximum use you must have a Google account. </string>
    <string name="quick_guide_features_title">Features</string>
    <string name="quick_guide_feature_one">1. Sync tasks between a multiple Google accounts with a one application. </string>
    <string name="quick_guide_feature_two">2. Application view tasks in three categories “Overdue”, “Today” and “Other”. Overdue tasks will be automatically deleted after certain duration which user can specify. Default is after one month. You can  change this in settings, Overdue task removing. Tasks will be removed according to the Task end date. You can have a preferred task title as default. </string>
    <string name="quick_guide_feature_three">3. In “Gtask” menu item is to view your Gtask list. From that list you can specify the required task that need to be synced to the app. You can switch your accounts in Gtask list. </string>
    <string name="quick_guide_feature_four">4. If you need to sync a task which is in the application you need to switch the task into Edit view and in there is a menu item called sync; that will sync that particular task to your account. You can change your accounts when you sync.</string>
    <string name="quick_guide_permissions_required">Permissions</string>
    <string name="quick_guide_permission_one">1. GET_ACCOUNTS &amp; USE_CREDENTIALS</string>
    <string name="quick_guide_permission_one_details">     Allows an application to request authentication tokens.</string>
    <string name="quick_guide_permission_two">2. INTERNET</string>
    <string name="quick_guide_permission_two_details">     Allows application to create network sockets and communicate.</string>
    <string name="quick_guide_permission_three">3. WAKE_LOCK</string>
    <string name="quick_guide_permission_three_details">     Allows application to prevent phone getting into sleep while notifications. </string>
    <string name="quick_guide_permission_four">4. RECEIVE_BOOT_COMPLETED</string>
    <string name="quick_guide_permission_four_details">     Allows application to Boot up when the device boots. Which requires to maintain reminders. </string>
    <string name="quick_guide_footer">This is an Open source application and you can access the application repository</string>
    <string name="quick_guide_github_link">https://github.com/rajithsiriwardana/Gtaskdroid</string>    

</resources>