<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:key="@string/pref_category_task_default_key" android:title="@string/pref_category_task_default_title">
        <EditTextPreference android:key="@string/pref_task_title_key" android:title="@string/pref_task_title_title" android:dialogTitle="@string/pref_task_title_dialog_title" android:summary="@string/pref_task_title_summary" android:dialogMessage="@string/pref_task_title_message"/>        
    </PreferenceCategory>	
	 <PreferenceCategory android:title="@string/advanced_options" >    
         <ListPreference
           android:title="@string/pref_task_overdue_delete_title"
           android:summary="@string/pref_task_overdue_delete_summary"          
           android:key="@string/pref_task_overdue_delete"
           android:defaultValue="1"
           android:entries="@array/time"
           android:entryValues="@array/time_pref_num" />                                                              
    </PreferenceCategory>	
</PreferenceScreen>
 