<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">     
        
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt_app_name_str"
        android:textAppearance="?android:attr/textAppearanceLarge" /> 
     
      <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
      <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
      <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_intro"
        android:textAppearance="?android:attr/textAppearanceSmall" />
      
      <TextView
        android:id="@+id/TextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceSmall" />
      
      
      <TextView
        android:id="@+id/TextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_features_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />
      
      <TextView
        android:id="@+id/TextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_feature_one"
        android:textAppearance="?android:attr/textAppearanceSmall" />
      
      <TextView
        android:id="@+id/TextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_feature_two"
        android:textAppearance="?android:attr/textAppearanceSmall" />
      
       <TextView
        android:id="@+id/TextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_feature_three"
        android:textAppearance="?android:attr/textAppearanceSmall" />
       
       <TextView
        android:id="@+id/TextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_feature_four"
        android:textAppearance="?android:attr/textAppearanceSmall" />
       
      <TextView
        android:id="@+id/TextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceSmall" />
      
     <TextView
        android:id="@+id/TextView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permissions_required"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <TextView
        android:id="@+id/TextView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_one"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     
     <TextView
        android:id="@+id/TextView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_one_details"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     
     <TextView
        android:id="@+id/TextView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_two"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     
     <TextView
        android:id="@+id/TextView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_two_details"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <TextView
        android:id="@+id/TextView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_three"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <TextView
        android:id="@+id/TextView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_three_details"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <TextView
        android:id="@+id/TextView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_four"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <TextView
        android:id="@+id/TextView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_permission_four_details"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     
     <TextView
        android:id="@+id/TextView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <TextView
        android:id="@+id/TextView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_footer"
        android:textAppearance="?android:attr/textAppearanceSmall" /> 
        
      <TextView
        android:id="@+id/TextView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_guide_github_link"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
</LinearLayout>    

</ScrollView>