<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/save"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:inputType="textEmailSubject" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:text="@string/note" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:inputType="textMultiLine"
        android:minLines="5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/note"
        android:text="@string/event_location" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:inputType="text" />

    <Button
        android:id="@+id/save"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/save" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/location"
        android:layout_marginTop="29dp"
        android:text="@string/duration" />

    <CheckBox
        android:id="@+id/add_reminder_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/location"
        android:text="@string/add_reminder" />

    <Button
        android:id="@+id/event_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/event_end_date"
        android:layout_below="@+id/add_reminder_checkbox" />

    <Button
        android:id="@+id/event_start_time"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_start_date"
        android:layout_alignBottom="@+id/event_start_date"
        android:layout_toLeftOf="@+id/add_reminder_checkbox" />

    <Button
        android:id="@+id/event_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/event_start_date"
        android:layout_marginTop="17dp"
        android:layout_toLeftOf="@+id/event_start_time" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/event_start_date"
        android:text="@string/duration_to" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/event_start_time"
        android:text="@string/time" />

    <Button
        android:id="@+id/reminder_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2" />

    <Button
        android:id="@+id/reminder_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reminder_date"
        android:layout_below="@+id/textView3" />

    <Button
        android:id="@+id/event_end_time"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_end_date"
        android:layout_alignBottom="@+id/event_end_date"
        android:layout_toLeftOf="@+id/add_reminder_checkbox" />

</RelativeLayout>