<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:layout_width="wrap_content"
            	  android:layout_height="wrap_content"
            	  android:text="@string/title"/>        
        <EditText android:id="@+id/title"
                  android:inputType="textEmailSubject"
            	  android:layout_width="fill_parent"
            	  android:layout_height="wrap_content" />        
        <TextView android:layout_width="wrap_content"
            	  android:layout_height="wrap_content"
            	  android:text="@string/note"/>        
        <EditText android:id="@+id/note"
            	  android:inputType="text"
            	  android:layout_width="fill_parent"
             	  android:layout_height="wrap_content"
             	  android:minLines="5"
             	  android:scrollbars="vertical"
             	  android:gravity="top"/>        
        <TextView android:layout_width="wrap_content"
            	  android:layout_height="wrap_content"
            	  android:text="@string/date"/>        
        <Button   android:id="@+id/reminder_date"
             	  android:layout_width="wrap_content"
             	  android:layout_height="wrap_content"/>        
        <TextView android:layout_width="wrap_content"
            	  android:layout_height="wrap_content"
            	  android:text="@string/time"/>
        <Button   android:id="@+id/reminder_time"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
        <Button   android:id="@+id/save"
            	  android:text="@string/save"
            	  android:layout_height="wrap_content"
            	  android:layout_width="wrap_content"/>
        
                
        	
    </LinearLayout>
    

</ScrollView>